--- a/components/hero.html
+++ b/components/hero.html
@@ -15,7 +15,7 @@
         </p>
         <div class="hero-cta">
           <a href="#contact" class="btn btn-primary">Get in Touch</a>
-          <a href="#projects" class="btn btn-secondary">View My Works</a>
+          <a href="#projects" class="btn btn-secondary">View My Work</a>
         </div>
         <div class="social-links">
           <a href="" class="social-link" aria-label="LinkedIn" target="_blank"
