--- a/components/publications.html
+++ b/components/publications.html
@@ -52,7 +52,7 @@
               ><i class="fas fa-external-link-alt"></i> View</a
             >
             <!-- <a
-              href="https://www.ijeat.org/wp-content/uploads/papers/v8i6/E7296068519.pdf"
+              href=""
               target="_blank"
               download
               class="secondary-link"
