google site verification added

--- a/components/education.html
+++ b/components/education.html
@@ -50,10 +50,13 @@
           </p>
 
           <div class="education-highlights">
-            <span class="education-highlight">Electronics</span>
-            <span class="education-highlight">Instrumentation</span>
-            <span class="education-highlight">Control Systems</span>
-            <span class="education-highlight">Signal Processing</span>
+            <span class="education-highlight">DBMS</span>
+            <span class="education-highlight">IR & KOM</span>
+            <span class="education-highlight">Programming</span>
+            <span class="education-highlight">LIS</span>
+            <span class="education-highlight">Networking</span>
+            <span class="education-highlight">Cataloguing</span>
+            <span class="education-highlight">Digital Repository</span>
           </div>
         </div>
       </div>
