--- a/components/achievements.html
+++ b/components/achievements.html
@@ -88,6 +88,7 @@
         </div>
       </div>
     </div>
+
     <!-- Other Notable Accomplishments -->
     <div class="other-achievements-section">
       <h3 class="other-achievements-heading">Other Notable Accomplishments</h3>
@@ -99,20 +100,23 @@
           </div>
           <div class="other-achievement-content">
             <h3 class="other-achievement-title">
-              Spot Award (Extra-Mile Award)
+              Recognition of Building and Deploying an Institutional Repository
+              System for Assosa University
             </h3>
-            <p class="other-achievement-org">Esko Graphics Private Ltd.</p>
-            <div class="other-achievement-year">2021 - 2023</div>
+            <p class="other-achievement-org">Assosa University</p>
+            <div class="other-achievement-year">2021</div>
             <p class="other-achievement-description">
-              Received the company-wide recognizable Spot Award (Extra-Mile
-              Award) consecutively for three years, recognizing exceptional
-              performance and going above and beyond regular responsibilities.
+              Received the Recognition Certifcate for Building and Deploying an
+              Institutional Repository System for Assosa University" for
+              successfully developing and implementing a digital repository
+              system to manage and provide access to the university's academic
+              resources and publications.
             </p>
           </div>
         </div>
 
         <!-- Professional Achievement -->
-        <div class="other-achievement-item">
+        <!-- <div class="other-achievement-item">
           <div class="other-achievement-icon">
             <i class="fas fa-lightbulb"></i>
           </div>
@@ -129,10 +133,10 @@
               as a new team member.
             </p>
           </div>
-        </div>
+        </div> -->
 
         <!-- College Achievement 1 -->
-        <div class="other-achievement-item">
+        <!-- <div class="other-achievement-item">
           <div class="other-achievement-icon">
             <i class="fas fa-microchip"></i>
           </div>
@@ -148,42 +152,7 @@
               received $200 worth of components as project funding.
             </p>
           </div>
-        </div>
-
-        <!-- College Achievement 2 -->
-        <div class="other-achievement-item">
-          <div class="other-achievement-icon">
-            <i class="fas fa-drafting-compass"></i>
-          </div>
-          <div class="other-achievement-content">
-            <h3 class="other-achievement-title">ADS 2019 Finalist</h3>
-            <p class="other-achievement-org">ACCS Design Challenge</p>
-            <div class="other-achievement-year">2019</div>
-            <p class="other-achievement-description">
-              Selected as a finalist in the ACCS Design Challenge, demonstrating
-              expertise in advanced computing and system design.
-            </p>
-          </div>
-        </div>
-
-        <!-- College Achievement 3 -->
-        <div class="other-achievement-item">
-          <div class="other-achievement-icon">
-            <i class="fas fa-microchip"></i>
-          </div>
-          <div class="other-achievement-content">
-            <h3 class="other-achievement-title">
-              Swadeshi Microprocessor Challenge Semifinalist
-            </h3>
-            <p class="other-achievement-org">Government of India</p>
-            <div class="other-achievement-year">2020</div>
-            <p class="other-achievement-description">
-              Reached the semifinal round of the prestigious Swadeshi
-              Microprocessor Challenge and secured 1 Lakh INR funding for
-              project development.
-            </p>
-          </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
