contact form corrected

--- a/components/achievements.html
+++ b/components/achievements.html
@@ -108,9 +108,7 @@
             <p class="other-achievement-description">
               Received the Recognition Certifcate for Building and Deploying an
               Institutional Repository System for Assosa University" for
-              successfully developing and implementing a digital repository
-              system to manage and provide access to the university's academic
-              resources and publications.
+              successfully developing and deploying a digital repository system.
             </p>
           </div>
         </div>
