some parts updated

--- a/components/contact.html
+++ b/components/contact.html
@@ -53,6 +53,24 @@
             </p>
           </div>
         </div>
+        <div class="contact-item">
+          <div class="contact-icon">
+            <img
+              src="https://orcid.org/sites/default/files/images/orcid_16x16.png"
+              alt="ORCID iD icon"
+            />
+          </div>
+          <div class="contact-details">
+            <h3>ORCHID</h3>
+            <p>
+              <a
+                href="https://orcid.org/0009-0004-6283-1130"
+                target="orcid.widget"
+                >https://orcid.org/0009-0004-6283-1130</a
+              >
+            </p>
+          </div>
+        </div>
       </div>
       <div class="contact-form">
         <form
