--- a/components/footer.html
+++ b/components/footer.html
@@ -7,7 +7,7 @@
       </div>
       <div class="footer-social">
         <a
-          href="https://linkedin.com/in/cbg11"
+          href="https://www.linkedin.com/in/chala-bekabil-874069191"
           class="social-link"
           aria-label="LinkedIn"
           target="_blank"
@@ -20,11 +20,19 @@
           target="_blank"
           ><i class="fab fa-github"></i
         ></a>
-        <a href="" class="social-link" aria-label="HackerRank" target="_blank"
-          ><i class="fab fa-hackerrank"></i
+        <a
+          href="https://web.facebook.com/wangeelaaf.hojjedhu/"
+          class="social-link"
+          aria-label="Facebook"
+          target="_blank"
+          ><i class="fab fa-facebook"></i
         ></a>
-        <a href="" class="social-link" aria-label="Scaler" target="_blank"
-          ><span class="scaler-icon"></span
+        <a
+          href="https://t.me/cbekabil"
+          class="social-link"
+          aria-label="Telegram"
+          target="_blank"
+          ><i class="fab fa-telegram"></i
         ></a>
       </div>
       <div class="privacy-notice">
