--- a/components/hero.html
+++ b/components/hero.html
@@ -18,7 +18,11 @@
           <a href="#projects" class="btn btn-secondary">View My Work</a>
         </div>
         <div class="social-links">
-          <a href="" class="social-link" aria-label="LinkedIn" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/chala-bekabil-874069191"
+            class="social-link"
+            aria-label="LinkedIn"
+            target="_blank"
             ><i class="fab fa-linkedin"></i
           ></a>
           <a
@@ -29,18 +33,18 @@
             ><i class="fab fa-github"></i
           ></a>
           <a
-            href="https://www.hackerrank.com/profile/cbg11"
+            href="https://web.facebook.com/wangeelaaf.hojjedhu/"
             class="social-link"
-            aria-label="HackerRank"
+            aria-label="Facebook"
             target="_blank"
-            ><i class="fab fa-hackerrank"></i
+            ><i class="fab fa-facebook"></i
           ></a>
           <a
-            href="https://www.scaler.com/academy/profile/1234"
+            href="https://t.me/cbekabil"
             class="social-link"
-            aria-label="Scaler"
+            aria-label="Telegram"
             target="_blank"
-            ><span class="scaler-icon"></span
+            ><i class="fab fa-telegram"></i
           ></a>
         </div>
       </div>
